# HUST-ComputerNetwork-SOCKET

./: .gitignore  CMakeLists.txt  README.md  chat_server.db  project_overview.md  socket_logging_implementation.md  socket_testing_guide.md  test.db  test_quick.db  todo.md
client/: AuthDialog.cpp  AuthDialog.h  ChatClient.cpp  ChatClient.h  MainWindow.cpp  MainWindow.h  client_main.cpp
common/: Protocol.cpp  Protocol.h
python/: chat_client.py  chat_server.py  database.py  protocol.py  socket_wrapper.py
python/cpp_socket/: build.bat  socket_client.cpp  socket_client.h
server/: ClientSession.cpp  ClientSession.h  Database.cpp  Database.h  Server.cpp  Server.h  server_main.cpp
server_gui/: ServerWindow.cpp  ServerWindow.h  server_gui_main.cpp
